немного стелал шапку

--- a/index.html
+++ b/index.html
@@ -21,8 +21,33 @@
 </head>
 <body>
     <div id="header" >
-        <p class="alex">Alex</p>
+        <div id="nav">
+            <div class="sot_set">
+                <p>GO BANANAS в соц.сетях:</p>
+                <img src="img/Mizhnarodniy_logotip_VK.png" alt="vk">
+            </div>
+            <div class="seadge_a">
+                <input type="text">
+            </div>
+        </div>
+
+
+        <div id="top_menu">
+            <ul id="menu_a">
+                <li><a href="#">Полезные знакомства</a></li>
+                <li><a href="#">Interview</a></li>
+                <li><a href="#">top models</a></li>
+                <li><a href="#">персона</a></li>
+                <li><a href="#">fashion story</a></li>
+                <li><a href="#">people</a></li>
+                <li><a href="#">события</a></li>
+            </ul>
+        </div>
+
+
     </div>
+
+
     <div id="short_post" >
         <p class="alex">mini blogs</p>
     </div>
