добавлен блок с авторами

--- a/index.html
+++ b/index.html
@@ -128,18 +128,32 @@
         <img src="" alt="banner" class="adv-block-lower">
     </div>
     <div id="authors" class="container">
-        <div class="row margin-bot-40">
+        <div class="row">
             <div class="col-lg-3 col-md-3 col-sm-12">
-                <h3 class="best-authors pink">наши  лучшие  авторы</h3>
+                <h3 class="best-authors pink text-center">наши лучшие авторы</h3>
             </div>
             <div class="col-lg-9 col-md-9 col-sm-12">
                 <div class="row">
                     <div class="col-md-3 col-lg-3 col-sm-6">
-
+                        <img src="img/author.png" alt="author" class="author-pic">
+                        <p class="text-center text-uppercase white">Иван Иванов</p>
+                        <p class="text-center grey">редактор рубрики СПОРТ</p>
                     </div>
-                    <div class="col-md-3 col-lg-3 col-sm-6"></div>
-                    <div class="col-md-3 col-lg-3 col-sm-6"></div>
-                    <div class="col-md-3 col-lg-3 col-sm-6"></div>
+                    <div class="col-md-3 col-lg-3 col-sm-6">
+                        <img src="img/author.png" alt="author" class="author-pic">
+                        <p class="text-center text-uppercase white">Иван Иванов</p>
+                        <p class="text-center grey">редактор рубрики СПОРТ</p>
+                    </div>
+                    <div class="col-md-3 col-lg-3 col-sm-6">
+                        <img src="img/author.png" alt="author" class="author-pic">
+                        <p class="text-center text-uppercase white">Иван Иванов</p>
+                        <p class="text-center grey">редактор рубрики СПОРТ</p>
+                    </div>
+                    <div class="col-md-3 col-lg-3 col-sm-6">
+                        <img src="img/author.png" alt="author" class="author-pic">
+                        <p class="text-center text-uppercase white">Иван Иванов</p>
+                        <p class="text-center grey">редактор рубрики СПОРТ</p>
+                    </div>
                 </div>
             </div>
         </div>
