--- a/index.html
+++ b/index.html
@@ -12,12 +12,18 @@
 
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="style.css">
-
+    <!-- HTML5 shiv and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 <body>
     <div id="header" >
@@ -159,13 +165,48 @@
         </div>
     </div>
 
-
+<!-- Max blogs mini and footer -->
     <div id="blogs_mini" >
-        <p class="max">локи со статьями</p>
+        <div class="container id='prefooter'">
+            <div class="row">
+                <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
+                  <img class="img-responsive" src="img/post-thumb2.jpg" alt="Article in Footer">
+                  <h4>ЗДЕСЬ НАЗВАНИЕ СТАТЬИ ИЛИ <br>ИНТЕРВЬЮ, ЧТО-ТО ИНТЕРЕСНОЕ И ВАЖНОЕ</h4>
+                  <p>ПЕРСОНА</p>
+                </div>
+                <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
+                  <img class="img-responsive" src="img/post-thumb2.jpg" alt="Article in Footer">
+                  <h4>ЗДЕСЬ НАЗВАНИЕ СТАТЬИ ИЛИ <br>ИНТЕРВЬЮ, ЧТО-ТО ИНТЕРЕСНОЕ И ВАЖНОЕ</h4>
+                  <p>ПЕРСОНА</p>
+                </div>
+                <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
+                  <img class="img-responsive" src="img/post-thumb2.jpg" alt="Article in Footer">
+                  <h4>ЗДЕСЬ НАЗВАНИЕ СТАТЬИ ИЛИ <br>ИНТЕРВЬЮ, ЧТО-ТО ИНТЕРЕСНОЕ И ВАЖНОЕ</h4>
+                  <p>ПЕРСОНА</p>
+                </div> 
+                <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
+                  <img class="img-responsive" src="img/post-thumb2.jpg" alt="Article in Footer">
+                  <h4>ЗДЕСЬ НАЗВАНИЕ СТАТЬИ ИЛИ <br>ИНТЕРВЬЮ, ЧТО-ТО ИНТЕРЕСНОЕ И ВАЖНОЕ</h4>
+                  <p>ПЕРСОНА</p>
+                </div>
+            </div>
+        </div>
     </div>
-    <div id="footer" >
-        <p class="max">журнал, ссылки, адреса</p>
+    <div class="container id='footer'">
+        <div class="row">
+            <div class="col-xs-6 col-sm-4">
+              <h4>ЗДЕСЬ НАЗВАНИЕ СТАТЬИ ИЛИ <br>ИНТЕРВЬЮ, ЧТО-ТО ИНТЕРЕСНОЕ И ВАЖНОЕ</h4>
+              <p>ПЕРСОНА</p>
+            </div>
+            <div class="col-xs-6 col-sm-4">
+              <h4>ЗДЕСЬ НАЗВАНИЕ СТАТЬИ ИЛИ ИНТЕРВЬЮ, ЧТО-ТО ИНТЕРЕСНОЕ И ВАЖНОЕ</h4>
+              <p>ПЕРСОНА</p>
+            </div>
+            <div class="col-xs-6 col-sm-4">
+              <h4>ЗДЕСЬ НАЗВАНИЕ СТАТЬИ ИЛИ ИНТЕРВЬЮ, ЧТО-ТО ИНТЕРЕСНОЕ И ВАЖНОЕ</h4>
+              <p>ПЕРСОНА</p>
+            </div>
+        </div>
     </div>
-
 </body>
 </html>
