--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
                   <img class="img-responsive" src="img/post-thumb2.jpg" alt="Article in Footer">
                   <h4>ЗДЕСЬ НАЗВАНИЕ СТАТЬИ ИЛИ <br>ИНТЕРВЬЮ, ЧТО-ТО ИНТЕРЕСНОЕ И ВАЖНОЕ</h4>
-                  <p>ПЕРСОНА</p>
+                  <p class="grey">ПЕРСОНА</p>
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
                   <img class="img-responsive" src="img/post-thumb2.jpg" alt="Article in Footer">
@@ -192,19 +192,41 @@
             </div>
         </div>
     </div>
-    <div class="container id='footer'">
-        <div class="row">
-            <div class="col-xs-6 col-sm-4">
-              <h4>ЗДЕСЬ НАЗВАНИЕ СТАТЬИ ИЛИ <br>ИНТЕРВЬЮ, ЧТО-ТО ИНТЕРЕСНОЕ И ВАЖНОЕ</h4>
-              <p>ПЕРСОНА</p>
+    <div id='footer' class="container ">
+        <div class="row mazafaka">
+            <div class="col-xs-6 col-sm-2">
+                <div class="journal">
+                    <img class="snizu" src="img/journalNaklon.png" alt="journal 15 degrees">
+                    <img class="sverhu" src="img/journalVertical.png" alt="journal vertical">
+                </div>
             </div>
-            <div class="col-xs-6 col-sm-4">
-              <h4>ЗДЕСЬ НАЗВАНИЕ СТАТЬИ ИЛИ ИНТЕРВЬЮ, ЧТО-ТО ИНТЕРЕСНОЕ И ВАЖНОЕ</h4>
-              <p>ПЕРСОНА</p>
+            <div class="col-xs-6 col-sm-2 journText">
+                <div class="journTextContent pink">
+                    ВЫПУСК<br>
+                    <b>МАЙ 2016</b>
+                </div>
+                <p>скачать</p>
             </div>
-            <div class="col-xs-6 col-sm-4">
-              <h4>ЗДЕСЬ НАЗВАНИЕ СТАТЬИ ИЛИ ИНТЕРВЬЮ, ЧТО-ТО ИНТЕРЕСНОЕ И ВАЖНОЕ</h4>
-              <p>ПЕРСОНА</p>
+            <div class="col-xs-12 col-sm-4">
+                <h4>КОНТАКТЫ</h4>
+                <h4>АРХИВ</h4>
+                <h4>БЛОГ ГЛАВНОГО РЕДАКТОРА</h4>
+                <h4>СКАЧАТЬ ВСЕ ВЫПУСКИ</h4>
+                <br>
+                <p class="socialNet">GO BANANAS В СОЦ.СЕТЯХ:<img src="img/Mizhnarodniy_logotip_VK.png" alt="vk"></p>
+            </div>
+            <div class="col-xs-12 col-sm-4 text-right">
+              <p>© 2016-2017</p>
+                <br>
+                <br>
+                <br>
+              <p><small>
+                  Использование информации, перепечатка и <br>
+                  т.д. и бла-бла-бла, я найду текст юридически <br>
+                  правильно составленный, чтобы здесь можно <br>
+                  было разместить, и будет все правильно и <br>
+                  красиво...
+              </small></p>
             </div>
         </div>
     </div>
