улучил свою часть

--- a/index.html
+++ b/index.html
@@ -26,37 +26,61 @@
     <![endif]-->
 </head>
 <body>
-    <div id="header" >
-        <div id="nav">
-            <div class="sot_set">
-                <p>GO BANANAS в соц.сетях:</p>
-                <img src="img/Mizhnarodniy_logotip_VK.png" alt="vk">
+    <div class="container">s
+        <div id="header" >
+            <div id="nav">
+                <div class="sot_set">
+                    <p>GO BANANAS в соц.сетях:</p>
+                    <a href="https://vk.com/go_bananas_magazine"><img src="img/Mizhnarodniy_logotip_VK.png" alt="vk"></a>
+                </div>
+                <div class="seadge_a">
+                    <input type="text">
+                </div>
             </div>
-            <div class="seadge_a">
-                <input type="text">
+
+
+            <img id="top_gobananas" src="img/gobananas.png" alt="logo gobanans">
+
+
+            <div id="top_menu">
+                <ul id="menu_a">
+                    <li><a href="#">Полезные <br> знакомства</a></li>
+                    <li><a href="#">Interview</a></li>
+                    <li><a href="#">top models</a></li>
+                    <li><a href="#">персона</a></li>
+                    <li><a href="#">fashion <br> story</a></li>
+                    <li><a href="#">people</a></li>
+                    <li><a href="#">события</a></li>
+                </ul>
+                <a href="#"><img id="pdf_load" src="img/pdf.png" alt=""></a>
             </div>
         </div>
-
-
-        <div id="top_menu">
-            <ul id="menu_a">
-                <li><a href="#">Полезные знакомства</a></li>
-                <li><a href="#">Interview</a></li>
-                <li><a href="#">top models</a></li>
-                <li><a href="#">персона</a></li>
-                <li><a href="#">fashion story</a></li>
-                <li><a href="#">people</a></li>
-                <li><a href="#">события</a></li>
-            </ul>
-        </div>
-
-
     </div>
-
 
     <div id="short_post" >
-        <p class="alex">mini blogs</p>
+        <div class="container id='prefooter'">
+            <div class="row">
+                <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
+                    <img class="img-responsive" src="img/img_block1.jpg" alt="Article in Footer">
+                    <h4 class="title_blog">Это будет заголовок статьи</h4>
+                </div>
+                <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
+                    <img class="img-responsive" src="img/img_block2.jpg" alt="Article in Footer">
+                    <h4 class="title_blog">Это будет заголовок статьи</h4>
+                </div>
+                <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
+                    <img class="img-responsive" src="img/img_block1.jpg" alt="Article in Footer">
+                    <h4 class="title_blog">Это будет заголовок статьи</h4>
+                </div>
+                <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
+                    <img class="img-responsive" src="img/img_block2.jpg" alt="Article in Footer">
+                    <h4 class="title_blog">Это будет заголовок статьи</h4>
+                </div>
+            </div>
+        </div>
     </div>
+
+
 
 
     <div id="blogs" class="container">
