Footer some adjustments due to customer's notations

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <![endif]-->
 </head>
 <body>
-    <div class="container">s
+    <div class="container">
         <div id="header" >
             <div id="nav">
                 <div class="sot_set">
@@ -229,22 +229,20 @@
                     ВЫПУСК<br>
                     <b>МАЙ 2016</b>
                 </div>
-                <p>скачать</p>
+                <a href="#"><p>скачать</p></a>
             </div>
-            <div class="col-xs-12 col-sm-4">
-                <h4>КОНТАКТЫ</h4>
-                <h4>АРХИВ</h4>
-                <h4>БЛОГ ГЛАВНОГО РЕДАКТОРА</h4>
-                <h4>СКАЧАТЬ ВСЕ ВЫПУСКИ</h4>
+            <div class="col-xs-12 col-sm-4 contactsLinks">
+                <a href="#"><h4>КОНТАКТЫ</h4></a>
+                <a href="#"><h4>АРХИВ</h4></a>
+                <a href="#"><h4>БЛОГ ГЛАВНОГО РЕДАКТОРА</h4></a>
+                <a href="#"><h4>СКАЧАТЬ ВСЕ ВЫПУСКИ</h4></a>
                 <br>
-                <p class="socialNet">GO BANANAS В СОЦ.СЕТЯХ:<img src="img/Mizhnarodniy_logotip_VK.png" alt="vk"></p>
+                <p class="socialNet">GO BANANAS В СОЦ.СЕТЯХ:<a href="#"><img src="img/Mizhnarodniy_logotip_VK.png" alt="vk"></a></p>
             </div>
-            <div class="col-xs-12 col-sm-4 text-right">
+            <div class="col-xs-12 col-sm-4 text-right years">
               <p>© 2016-2017</p>
                 <br>
-                <br>
-                <br>
-              <p><small>
+              <p class="impressum"><small>
                   Использование информации, перепечатка и <br>
                   т.д. и бла-бла-бла, я найду текст юридически <br>
                   правильно составленный, чтобы здесь можно <br>
