добавлен блок с авторами

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <![endif]-->
 </head>
 <body>
-    <div class="container">s
+    <div class="container">
         <div id="header" >
             <div id="nav">
                 <div class="sot_set">
@@ -157,8 +157,8 @@
     <div id="advertisment" class="container margin-top-40 margin-bot-40">
         <img src="" alt="banner" class="adv-block-lower">
     </div>
-    <div id="authors" class="container">
-        <div class="row">
+    <div id="authors" class="container margin-bot-40">
+        <div class="row fixer">
             <div class="col-lg-3 col-md-3 col-sm-12">
                 <h3 class="best-authors pink text-center">наши лучшие авторы</h3>
             </div>
